...
    <string name="dashboard">Dashboard</string>
    <string name="expenses">Expenses</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
    <string name="duplicate">Duplicate</string>
    <string name="clear">Clear</string>
    <string name="logout">Log out</string>
    <string name="navigate_up">Navigate up</string>
    <string name="remove_item">Remove %1$s</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>

    <string name="login_successful">You are logged in as</string>

...
    <string name="income_name">Income name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="labels">Labels</string>
    <string name="label">Label</string>
    <string name="create_label">Create new label</string>
    <string name="add_label">Add label</string>

    <string name="total_expenses">Total expenses</string>
    <string name="on_filters">Based on filters</string>

    <string name="login_signup_email">Enter your email</string>
...
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="back_to_login">Back to sign in</string>

    <string name="warning_home">Add your first expense</string>
    <string name="warning_budget">Add your first income</string>
    <string name="warning_labels">Add your first label</string>

    <string name="expenses_today">Expenses today</string>
    <string name="expenses_budget">Expense on budget</string>
    <string name="this_month">Expenses this month</string>
    <string name="this_year_next">Expenses this year</string>
    <string name="monthly_expenses">Monthly expenses</string>
...
