...
                    image = R.drawable.image_file_searching_rafiki,
                    message = R.string.warning_labels
                )
            } else {
                LazyColumn(
                    modifier = Modifier
                        .testTag("labels_list")
                        .widthIn(max = BottomSheetDefaults.SheetMaxWidth)
                ) {
                    itemsIndexed(
                        items = allLabels,
                        key = { _, label -> label }
                    ) { index, label ->
...

@Preview(showBackground = true)
@Composable
fun LabelsPreview() {
    MyFinanceTheme {
        LabelsContent(
            allLabels = listOf("Food", "Transport", "Rent", "Health", "Entertainment"),
            onBackClick = {},
            onAddLabel = {},
            onDeleteLabel = {},
            onEditLabel = { _, _ -> },
            snackbarHost = {}
        )
...
