...
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/list_emptyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/warning_home"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
