...
                Spacer(modifier = Modifier.height(16.dp))

                Button(
                    onClick = onAuthClick,
                    enabled = !isLoading,
                    shapes = ButtonDefaults.shapes(),
                    modifier = Modifier.testTag("login_button")
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_login_filled),
                        contentDescription = null,
                        modifier = Modifier.size(ButtonDefaults.IconSize)
                    )
...
